# evals

./: .gitattributes  pyproject.toml  tmp.md
evals/: api.py  base.py
evals/cli/: oaieval.py
evals/plugins/: base.py  llama.py  manager.py  openai.py
evals/prompt/: base.py
evals/registry/data/squad/: output.jsonl
evals/registry/data/test_match/: samples.jsonl
evals/registry/evals/: bigrams.yaml  born-first.yaml  squad.yaml
