[project]
name = "open-evals"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "mypy",
    "openai",
    "tiktoken",
    "blobfile",
    "backoff",
    "numpy",
    "snowflake-connector-python[pandas]",
    "pandas",
    "fire",
    "pydantic",
    "tqdm",
    "nltk",
    "filelock",
    "mock",
    "langdetect",
    'termcolor',
    "lz4",
    "pyzstd",
    "pyyaml",
    "sacrebleu",
    "matplotlib",
    "stevedore"
]

[project.scripts]
oaieval = "evals.cli.oaieval:main"
oaievalset = "evals.cli.oaievalset:main"
